feat(build): add forge and neoforge builds